--- a/DonationI.html
+++ b/DonationI.html
@@ -103,6 +103,7 @@
           <div id="errormessage">There is an error. Please check all fields again.</div>
 -->
 	<script>
+	//This is the thank you screen when the form is submitted.
 	function check()
 		{
 			document.getElementById("finish").innerHTML = "Thank you so much for your donation! This donation was sent to NVFS and " + 
