--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <div class="carousel-content">
                 <h2>Our Mission</h2>
                 <p>To empower individuals and families to improve their quality of life, and to promote community cooperation and support in responding to family needs.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Zer2-pB6ivA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -128,7 +129,20 @@
               </div>
             </div>
           </div>
-
+          
+          <div class="carousel-item">
+            <div class="carousel-background"><img src="img/socialmedia.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2>Connect With Us!</h2>
+                <p>Stay up to date with all the latest events at NVFS!</p>
+                <a href="https://www.facebook.com/NoVAFamilyService/" target="_blank" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/nvfs?lang=en" target="_blank" class="fa fa-twitter"></a>
+                <a href="https://www.youtube.com/user/NoVAFamilyService" target="_blank" class="fa fa-youtube"></a>
+              </div>
+            </div>
+          </div>
+          
         </div>
 
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
