--- a/DonationI.html
+++ b/DonationI.html
@@ -229,6 +229,7 @@
 		var Location = $("#dropdown").val();
 		var Type = $("#donationType").val();
 		var Description = $("#description").val();
+		    //testing if type works
 		alert(Type);
 		//this variable is so that the app can submit the fields to the server
                 var dataString = "FirstName=" + FirstName + "&LastName=" + LastName + "&CompanyName=" + CompanyName +"&Street=" + Street + "&City=" + City + "&ZipCode=" + ZipCode +"&Phone=" + Phone + "&Email=" + Email + "&Location=" + Location + "&Type=" + Type + "&Description=" + Description + "&insert=";
