--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
-              <li><a href="youth_initiatives">Youth Initiatives</a></li>
+              <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
           </li>
           <li class="menu-has-children"><a href=""> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI">In-Kind</a></li>
+              <li><a href="DonationI.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
