--- a/Contact.html
+++ b/Contact.html
@@ -110,10 +110,10 @@
 		  </p>
 		  <h5><center>Thrift Shop</center></h5>
 		  <p>
-		  <a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower @ Falls Church</a>
-		  *For more info, click on the Clock Tower Link
-		  2860 Annandale Rd.
-		  Falls Church, VA 22042
+		  <a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower @ Falls Church</a> <br>
+		  *For more info, click on the Clock Tower Link <br>
+		  2860 Annandale Rd. <br>
+		  Falls Church, VA 22042 <br>
 		  Phone Number: <a href="tel:7032371910">703.237.1910</a>
 		  </p>
           <!--<div class="img">
