--- a/About.html
+++ b/About.html
@@ -62,7 +62,7 @@
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href=""> Donate</a>
+          <li class="menu-has-children"><a href="#"> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
               <li><a href="DonationI.html">In-Kind</a></li>
