--- a/DonationI.html
+++ b/DonationI.html
@@ -60,19 +60,19 @@
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
-              <li><a href="#">Foster Care and Adoption</a></li>
+              <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
-              <li><a href="#">Youth Initiatives</a></li>
+              <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href=""> Donate</a>
+          <li class="menu-has-children"><a href="#"> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI">In-Kind</a></li>
+              <li><a href="DonationI.html">In-Kind</a></li>
             </ul>
           </li>
           <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
