--- a/Resources.html
+++ b/Resources.html
@@ -40,13 +40,11 @@
   <!--==========================
     Header
   ============================-->
- <header id="header">
-    <div class="container-fluid">
+<header id="header">
+      <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="#intro"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -54,17 +52,17 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li class="menu-has-children"><a href="Resources.html">Resources</a>
             <ul>
-              <li><a href="#">Early Childhood Development</a></li>
-              <li><a href="#">Foster Care and Adoption</a></li>
+              <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
+              <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
               <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
               <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
               <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
               <li><a href="MentalHealth.html">Mental Health</a></li>
               <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
-              <li><a href="#">Youth Initiatives</a></li>
+              <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a>Donate</a>
+          <li class="menu-has-children"><a href="#"> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
               <li><a href="DonationI.html">In-Kind</a></li>
