--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     Header
   ============================-->
   <header id="header">
-    <div class="container-fluid">
+      <div class="container-fluid">
 
       <div id="logo" class="pull-left">
         <a href="#intro"><img src="img/nvfs.png" alt="" title="" /></a>
@@ -65,7 +65,7 @@
               <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
             </ul>
           </li>
-          <li class="menu-has-children"><a href=""> Donate</a>
+          <li class="menu-has-children"><a href="#"> Donate</a>
             <ul>
               <li><a href="Donation.html">Monetary</a></li>
               <li><a href="DonationI.html">In-Kind</a></li>
