--- a/FosterCare.html
+++ b/FosterCare.html
@@ -94,12 +94,16 @@
     <section id="services">
       <div class="container">
         <header class="section-header wow fadeInUp">
+          <br>
+		<br>
+		<br>
+		<br>
           <h3>Foster Care & Adoption</h3>
           <h4><center>Providing children with safe, healthy homes</center></h4>
           <p>NVFS Foster Care provides foster families in Northern Virginia and surrounding areas with the tools and support to build healthy, caring and therapeutic relationships with children placed in foster care. NVFS also helps foster parents bridge the gap between the child and his or her biological parents. As a result, these strong support networks help ensure that foster children are able to thrive in a safe and stable home environment while focusing on permanency.
 NVFS provides both therapeutic foster care and respite care programs.</p>
 <div class="img">
-            <img src="ing/fostercare.jpg" alt="" class="img-fluid">
+            <img src="img/fostercare.jpg" alt="" class="img-fluid">
           </div>
 
           </br></br> <h4><center>Interested in Becoming a Foster Parent?</center></h4>
