--- a/Resources.html
+++ b/Resources.html
@@ -124,7 +124,7 @@
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="test.php">Youth Initiatives</a></h4>
+            <h4 class="title"><a href="youth_initiatives.html">Youth Initiatives</a></h4>
           </div>
 		    <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-people-outline"></i></div>
