--- a/DonationI.html
+++ b/DonationI.html
@@ -184,14 +184,13 @@
 		Thank you for donating a large amount! There are two options for donating. You can Drop Off your donation or you can
 		have it Picked Up. Please select which way you will be donating.
 		<br> <br>
-		      <select name="dropdown" id="dropdown" size=1>
-			      <option value="1">---</option>
-			      <option value="Drop Off">Drop Off</option>
-			      <option value="Pick Up">Pick Up</option>
-		      </select>
+		      <input type="radio" id="Drop Off" name="Drop Off" value="Drop Off">
+		      <label for="Drop Off">Drop Off</label> &nbsp;
+	      	      <input type="radio" id="Pick Up" name="Pick Up" value="Pick Up">
+		      <label for="Pick Up">Pick Up</label> </br> <br>
 	      </div>
 	      <script>
-		      $('select[name="dropdown"]').change(function(){
+		      $('select[name="Drop Off"]').change(function(){
 				if ($(this).val() == "Drop Off")
 				{
 					document.getElementById("myform").style.display="block";
@@ -202,7 +201,7 @@
 					document.body.scrollTop = 0;
  		 			document.documentElement.scrollTop = 0;
 				}
-				else if($(this).val() == "Pick Up")
+				else 
 				{
 					document.getElementById("myform").style.display="block";
 					document.getElementById("stree").style.display="block";
@@ -226,7 +225,14 @@
 		var ZipCode = $("#ZipCode").val();
 		var Phone = $("#Phone").val();
 		var Email = $("#Email").val();
-		var Location = $("#dropdown").val();
+		    if ($("#Drop Off").val() == "Drop Off")
+		    {
+			var Location = "Drop Off";
+		    }
+		    else
+		    {
+			var Location = "Pick Up"; 
+		    }
 		var Type = $("#donationType").val();
 		var Description = $("#description").val();
 		
