--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -165,7 +165,7 @@
   <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main2.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 </html>
