--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/homestyle.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: BizPage
