--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Our Mission</h2>
-                <p>To empower individuals and families to improve their quality of life, and to promote community cooperation and support in responding to family needs.
-                <div class="iframe-container"> <iframe width="560" height="315" src="https://www.youtube.com/embed/Zer2-pB6ivA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                </p>
+                <p>To empower individuals and families to improve their quality of life, and to promote community cooperation and support in responding to family needs.</p>
               </div>
             </div>
           </div>
