--- a/dentalaccess.html
+++ b/dentalaccess.html
@@ -39,7 +39,7 @@
       <div class="container-fluid">
 
       <div id="logo" class="pull-left">
-        <a href="#intro"><img src="img/nvfs.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
