--- a/FosterCare.html
+++ b/FosterCare.html
@@ -112,7 +112,8 @@ NVFS foster and respite parent(s) must be over 21, financially and emotionally s
          <ul> <li>Intensive training, certification and <a href="https://www.nvfs.org/our-services/foster-care-adoption-northern-virginia/foster-parent-resources/" target="_blank" rel="noopener noreferrer">continuing education opportunities</a></li> <li>Careful child/parent matching</li> <li>24-hour support from professional social workers</li> <li>Modest financial reimbursement</li> <li>Help locating youth support services</li> <li>Family activities and support groups</li> <li><a href="https://www.nvfs.org/our-services/foster-care-adoption-northern-virginia/foster-parent-resources/">Online training and resources</a></li> </ul>
 <h4><center>Interested in Adoption?</center></h4>
 
-<p>Adoption through foster care is a long and complex process. The primary goal for children in foster care is to be reunified with family. If you’d like more information on adopting from foster care please contact us at 571-723-2927.</p>
+<p>Adoption through foster care is a long and complex process. The primary goal for children in foster care is to be reunified with family. If you’d like more information on adopting from foster care please contact us at <a href="tel:5717232927">571.723.2927</a>.
+</p>
           
 
           
