--- a/ImmigrationLegalService.html
+++ b/ImmigrationLegalService.html
@@ -172,7 +172,18 @@
 	  
     </section><!-- #services -->
 </main>
-		<footer id="footer">
+
+  <!--==========================
+    Footer
+  ============================-->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        
+
+        </div>
+      </div>
+    </div>
 
     <div class="container">
       <div class="copyright">
@@ -188,7 +199,7 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- #footer -->	
+  </footer><!-- #footer -->
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
@@ -213,6 +224,9 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+
+  <!-- Email Script Source-->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>  
 
 </body>
 </html>
