--- a/ImmigrationLegalService.html
+++ b/ImmigrationLegalService.html
@@ -161,7 +161,7 @@
             <div class="container text-center">
               <h3><center>Legal Hotline</center></h3>
               <font color="white">
-	      <a href="tel:5717482806>571.748.2806</a><br><br>
+	      <a href="tel:5717482806">571.748.2806</a><br><br>
                 Se habla español<br><br>Please note that due to high call volume, 
 				it may take up to one week for one of our immigration attorneys
 				to return your call.
