--- a/MentalHealth.html
+++ b/MentalHealth.html
@@ -110,7 +110,7 @@
           <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
               <h3><center>Contact</center></h3>
-              <font color="white"><a href="mailto:info@nvfs.org">info@nvfs.org</a> <p>(571)748-2500</p></font>
+              <font color="white"><a href="mailto:info@nvfs.org">info@nvfs.org</a> <p><a href="5717482500">tel:571.748.2500</a></p></font>
               
               <a class="cta-btn" href="https://www.nvfs.org/get-assistance/">Get Assistance</a>
             </div>
