--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -114,7 +114,7 @@
               <h3><center>Training Futures</center></h3>
               <strong><font color="white">Janice Halowich</font></strong><br>
               <font color="white">Program Manager</font><br><br>
-              <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / (571)748-2500</font><br><br>
+              <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / <a href="tel:5717482500>(571)748-2500</a></font><br><br>
               <font color="white">8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
@@ -131,7 +131,7 @@
               <h3><center>Vehicles for Change</center></h3>
               <strong><font color="white">Zoraida Tapia</font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
-              <font color="white"><a href="mailto:ztapia@nvfs.org">ztapia@nvfs.org</a> / (571)748-2561</font><br><br>
+              <font color="white"><a href="mailto:ztapia@nvfs.org">ztapia@nvfs.org</a> / <a href="tel:5717482561">(571)748-2561</a></font><br><br>
               <font color="white">10455 White Granite Dr. <br> Suite 100 <br> Oakton, VA 22124</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/vehicles-for-change/">Additional Information</a>
             </div>
@@ -142,7 +142,7 @@
              <div class="container text-center">
                 <h3><center>TeamUp</center></h3>
                 <strong><font color="white">Julie Mullen</font></strong><br>
-                <font color="white"><a href="mailto:jmullen@nvfs.org">jmullen@nvfs.org</a> / (571)748-2628</font><br><br>
+                <font color="white"><a href="mailto:jmullen@nvfs.org">jmullen@nvfs.org</a> / <a href="tel:5717482628">(571)748-2628</a></font><br><br>
             </div>
             </section>
             
