--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -114,7 +114,7 @@
               <h3><center>Training Futures</center></h3>
               <strong><font color="white">Janice Halowich</font></strong><br>
               <font color="white">Program Manager</font><br><br>
-              <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / <a href="tel:5717482500>(571)748-2500</a></font><br><br>
+              <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / <a href="tel:5717482500">(571)748-2500</a></font><br><br>
               <font color="white">8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
