--- a/youth_initiatives.html
+++ b/youth_initiatives.html
@@ -116,7 +116,7 @@
               <h3><center>Contact</center></h3>
               <strong><font color="white">Megan Palanci</font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
-              <font color="white"><a href="mailto:ztapia@nvfs.org">mpalanci@nvfs.org</a> / (571)748-2588</font><br><br>
+              <font color="white"><a href="mailto:ztapia@nvfs.org">mpalanci@nvfs.org</a> / <a href="tel:5717482588">(571)748-2588</a></font><br><br>
             </div>
           </section>
           
