--- a/HealthAndWellBeing.html
+++ b/HealthAndWellBeing.html
@@ -127,7 +127,7 @@
               <h3><center>Contact</center></h3>
               <font color="white">
                 NVFS Headquarters<br><br>
-                info@nvfs.org<br><br>571.748.2500
+		      Email: <a href="mailto:info@nvfs.org">info@nvfs.org</a><br><br>Phone: <a href="tel:5717482500">571.748.2500</a>
               </font>
             </div>
           </section>
