--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
   
   <!-- Social Media Icon Library-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -138,9 +138,24 @@
               <div class="carousel-content">
                 <h2>Connect With Us!</h2>
                 <p>Stay up to date with all the latest events at NVFS!</p>
-                <a href="https://www.facebook.com/NoVAFamilyService/" target="_blank" class="fa fa-facebook"></a>
-                <a href="https://twitter.com/nvfs?lang=en" target="_blank" class="fa fa-twitter"></a>
-                <a href="https://www.youtube.com/user/NoVAFamilyService" target="_blank" class="fa fa-youtube"></a>
+        <!-- facebook  Button -->
+                <a href="http://www.facebook.com" target="blank" class="social-margin"> 
+                  <div class="social-icon facebook">
+                    <i class="fa fa-facebook" aria-hidden="true"></i> 
+                  </div>
+                </a>
+                <!-- Youtube Button -->
+                <a href="http://youtube.com/" target="blank"  class="social-margin">
+                  <div class="social-icon youtube">
+                    <i class="fa fa-youtube" aria-hidden="true"></i>
+                  </div> 
+                </a>
+          <!-- TwitterButton -->
+                <a href="http://twitter.com/" target="blank" class="social-margin">
+                  <div class="social-icon twitter">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </div> 
+                </a>
               </div>
             </div>
           </div>
