--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
               <div class="carousel-content">
                 <h2>Connect With Us!</h2>
                 <p>Stay up to date with all the latest events at NVFS!</p>
+        <div class="social-buttons">        
         <!-- facebook  Button -->
                 <a href="http://www.facebook.com" target="blank" class="social-margin"> 
                   <div class="social-icon facebook">
@@ -156,6 +157,7 @@
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </div> 
                 </a>
+        </div>
               </div>
             </div>
           </div>
