--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@
                 <p>Stay up to date with all the latest events at NVFS!</p>
         <div class="social-buttons">        
         <!-- facebook  Button -->
-                <a href="http://www.facebook.com" target="blank" class="social-margin"> 
+                <a href="https://www.facebook.com/NoVAFamilyService/" target="blank" class="social-margin"> 
                   <div class="social-icon facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i> 
                   </div>
                 </a>
                 <!-- Youtube Button -->
-                <a href="http://youtube.com/" target="blank"  class="social-margin">
+                <a href="https://www.youtube.com/channel/UChgv5UlQrT_obJgqmBQjwxA" target="blank"  class="social-margin">
                   <div class="social-icon youtube">
                     <i class="fa fa-youtube" aria-hidden="true"></i>
                   </div> 
                 </a>
           <!-- TwitterButton -->
-                <a href="http://twitter.com/" target="blank" class="social-margin">
+                <a href="https://twitter.com/nvfs?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="blank" class="social-margin">
                   <div class="social-icon twitter">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </div> 
