--- a/WorkforceDevelopment.html
+++ b/WorkforceDevelopment.html
@@ -115,7 +115,7 @@
               <strong><font color="white">Janice Halowich</font></strong><br>
               <font color="white">Program Manager</font><br><br>
               <font color="white"><a href="mailto:jhalowich@nvfs.org">jhalowich@nvfs.org</a> / <a href="tel:5717482500">(571)748-2500</a></font><br><br>
-              <font color="white"><a href='https://maps.google.com/?q=8603westwoodcenterdrive'> <a href='https://maps.apple.com/maps?q=8603westwoodcenterdrive'>8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</a></a></font><br>
+              <font color="white"><a href='https://maps.google.com/?q=8603&nbsp;westwood&nbsp;center&nbsp;drive'> <a href='https://maps.apple.com/maps?q=8603&nbsp;westwood&nbsp;center&nbsp;drive'>8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</a></a></font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
           </section>
@@ -132,7 +132,8 @@
               <strong><font color="white">Zoraida Tapia</font></strong><br>
               <font color="white">Housing Counselor II</font><br><br>
               <font color="white"><a href="mailto:ztapia@nvfs.org">ztapia@nvfs.org</a> / <a href="tel:5717482561">(571)748-2561</a></font><br><br>
-              <font color="white">10455 White Granite Dr. <br> Suite 100 <br> Oakton, VA 22124</font><br>
+              <font color="white"><a href='https://maps.google.com/?q=10455&nbsp;white&nbsp;granite&nbsp;drive'> <a href='https://maps.apple.com/maps?q=10455&nbsp;white&nbsp;granite&nbsp;drive'>
+		      10455 White Granite Dr. <br> Suite 100 <br> Oakton, VA 22124</a></a></font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/vehicles-for-change/">Additional Information</a>
             </div>
           </section>
