--- a/DonationI.html
+++ b/DonationI.html
@@ -199,6 +199,13 @@
 		<a href="https://www.nvfs.org/support/top-donation-needs/donate-items/"> NVFS Donation Information</a>
 		<br>
 		<br>
+		Thrift Store <br>
+		<a href="https://www.nvfs.org/support/thrift-shops/">Clock Tower @ Falls Church</a> <br>
+		  *For more info, click on the Clock Tower Link <br>
+		  <a href='https://maps.google.com/?q=2860&nbsp;annandale&nbsp;road'> 
+		  <a href='https://maps.apple.com/maps?q=2860&nbsp;annandale&nbsp;road'>
+		  2860 Annandale Rd. <br>
+		  Falls Church, VA 22042 </a></a> <br><br>
 		Contact NVFS Donation Help <br>
 		C'Asha Faltz <br>
 		Email: <a href="mailto: cfaltz@nvfs.org">cfaltz@nvfs.org</a> <br>
