--- a/Donation.html
+++ b/Donation.html
@@ -92,79 +92,7 @@
           <p>Please fill in the fields below in order for us to process your donation.</p>
         </header>
 
-<div class="form">
-          <div id="sendmessage">Your payment has been processed. Thank you!</div>
-          <div id="errormessage"></div>
-          <form action="" method="post" role="form" class="contactForm">
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="First Name" data-rule="minlen:2" data-msg="Please enter a first name" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Last Name" data-rule="minlen:2" data-msg="Please enter a last name" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Company Name (optional)" data-rule="minlen:2" data-msg="Please enter a company name" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Country" data-rule="minlen:2" data-msg="Please enter a country" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Street address" data-rule="minlen:4" data-msg="Please enter a valid street adsdress" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="City" data-rule="minlen:2" data-msg="Please enter a valid city" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="State" data-rule="minlen:2" data-msg="Please enter a valid state" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Zip Code" data-rule="minlen:5" data-msg="Please enter a valid zip code" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Phone" data-rule="minlen:10" data-msg="Please enter a valid phone number" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Credit Card number" data-rule="minlen:16" data-msg="Please enter a valid Credit card number" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Expiration month" data-rule="minlen:4" data-msg="Please enter a valid month" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Expiration year" data-rule="minlen:4" data-msg="Please enter a valid year" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Security Code" data-rule="minlen:3" data-msg="Please enter a valid security code" />
-                <div class="validation"></div>
-              </div>
-			  <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Cardholder's full name" data-rule="minlen:2" data-msg="Please enter the full name" />
-                <div class="validation"></div>
-              </div>
-            </div>
-			<div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="" placeholder="Additional notes"></textarea>
-              <div class="validation"></div>
-            </div>
-            <div class="text-center"><button type="submit">Submit</button></div>
-          </form>
-        </div>
+	<iframe src="https://givebutter.com/embed/c/0gOVrV" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script>
 
           
 
