--- a/DonationI.html
+++ b/DonationI.html
@@ -57,7 +57,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-has-children"><a href="Resources.html">Resources</a>
+          <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
               <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
