--- a/workTest.html
+++ b/workTest.html
@@ -88,13 +88,13 @@ padding:0;
       <div id="logo" class="pull-left">
         <h1><a href="#intro" class="scrollto">NVFS</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
+        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-has-children"><a href="Resources.html">Resources</a>
+          <li class="menu-has-children"><a href="Services.html">Services</a>
             <ul>
               <li><a href="#">Early Childhood Development</a></li>
               <li><a href="#">Foster Care and Adoption</a></li>
