--- a/Donation.html
+++ b/Donation.html
@@ -91,13 +91,10 @@
           <h3>Monetary Donations</h3>
           <p>Please fill in the fields below in order for us to process your donation.</p>
         </header>
-
-	<iframe src="https://givebutter.com/embed/c/0gOVrV" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script>
-
-          
-
+	      <div class="iframe-container">
+		<iframe src="https://givebutter.com/embed/c/0gOVrV" width="100%" height="615px" style="max-width: 601px;" name="givebutter" frameborder="0" scrolling="no" seamless allowpaymentrequest></iframe><script src="https://givebutter.com/js/widget.js"></script>
+	      </div>
         </div>
-
       </div>
     </section><!-- #about -->
   </main>
