--- a/workTest.html
+++ b/workTest.html
@@ -156,6 +156,7 @@ padding:0;
               <strong><font color="white"><div id="Name1"></div></font></strong><br>
               <font color="white">Program Manager</font><br><br>
               <font color="white"><a id = "Email1" href="mailto:jhalowich@nvfs.org"></a>/<div id="Phone1"></div></font><br><br>
+		    <a href="tel:<div id="Phone1"></div>"><div id="Phone1"></div></a>
               <font color="white">8603 Westwood Center Dr. <br> Suite 300 <br> Vienna, VA 22182</font><br>
               <a class="cta-btn" href="https://www.nvfs.org/our-services/workforce-development/training-futures/">Additional Information</a>
             </div>
