--- a/Directory.html
+++ b/Directory.html
@@ -135,7 +135,7 @@
      <section id="services">
         <div class="container">
           <header class="section-header wow fadeInUp">
-            <h2>Directory</h2>
+            <h2>NVFS Directory</h2>
       
       <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search" title="Search Contact Information">
 
