--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
               </div>
             </div>
           </div>
+          
+          <div class="carousel-item">
+            <div class="carousel-background"><img src="img/services.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2>Services</h2>
+                <p>NVFS services range from the most basic of human needs, to helping families and individuals find paths to stability, to helping children, adults and families realize their full potential.</p>
+                <a href="Services.html" class="btn-get-started scrollto">Learn More</a>
+              </div>
+            </div>
+          </div>
 
           <div class="carousel-item">
             <div class="carousel-background"><img src="img/donate.jpg" alt=""></div>
