--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader"></div> -->
+  <div id="preloader" style="background-color: #067379;">
+  <img src="nvfsTransparent.png" style="width: 150px; height: 150px; margin-left: 40%; margin-top: 35%;">
+  </div> 
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
