--- a/index.html
+++ b/index.html
@@ -214,7 +214,16 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
   <div id="preloader" style="background-color: #067379;">
-  <img src="nvfsTransparent.png" style="width: 120px; height: 120px; margin-left: 35%; margin-top: 30%;">
+  <img src="nvfsTransparent.png" style="
+  position: fixed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  border: 6px solid #f2f2f2;
+  border-top: 6px solid #00A1A4;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+   ">
   </div> 
 
   <!-- JavaScript Libraries -->
