--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
-  <div id="preloader" style="background-color: #067379;">
+  <!-- <div id="preloader" style="background-color: #067379;">
   <img src="nvfsTransparent.png" style="
   position: fixed;
   top: calc(50% - 30px);
@@ -225,7 +225,7 @@
   height: 60px;
    ">
   </div> 
-
+   -->
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
