--- a/index.html
+++ b/index.html
@@ -213,19 +213,18 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader" style="background-color: #067379;">
+  <div id="preloader" style="background-color: #067379;">
   <img src="nvfsTransparent.png" style="
   position: fixed;
-  top: calc(50% - 30px);
-  left: calc(50% - 30px);
-  border: 6px solid #f2f2f2;
-  border-top: 6px solid #00A1A4;
+  top: calc(50% - 160px);
+  left: calc(50% - 60px);
+  border: 2px solid #FFF;
+  border-top: 2px solid #FFF;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
-   ">
+  width: 120px;
+  height: 120px;
+  ">
   </div> 
-   -->
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
