--- a/EarlyHeadStart2.html
+++ b/EarlyHeadStart2.html
@@ -106,43 +106,41 @@
   <!--==========================
     Header
   ============================-->
- <header id="header">
+   <header id="header">
     <div class="container-fluid">
 
-      <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">NVFS</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="#intro"><img src="img/logo.png" alt="" title="" /></a>
-      </div>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active"><a href="index.html">Home</a></li>
-          <li class="menu-has-children"><a href="Resources.html">Resources</a>
-            <ul>
-              <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
-              <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
-              <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
-              <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
-              <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
-              <li><a href="MentalHealth.html">Mental Health</a></li>
-              <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
-              <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
-            </ul>
-          </li>
-          <li class="menu-has-children"><a>Donate</a>
-            <ul>
-              <li><a href="Donation.html">Monetary</a></li>
-              <li><a href="DonationI.html">In-Kind</a></li>
-            </ul>
-          </li>
-          <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
-          <li class="menu-active"><a href="#About.html">About</a></li>
-          <li class="menu-active"><a href="#Contact.html">Contact</a></li>
-      </nav><!-- #nav-menu-container -->
+    <div id="logo" class="pull-left">
+      <a href="index.html"><img src="img/nvfs.png" alt="" title="" /></a>
     </div>
-  </header><!-- #header -->
 
+    <nav id="nav-menu-container">
+      <ul class="nav-menu">
+        <li class="menu-active"><a href="index.html">Home</a></li>
+  <li class="menu-active"><a href="Resources.html">Resources</a></li>
+        <li class="menu-has-children"><a href="Services.html">Services</a>
+          <ul>
+            <li><a href="EarlyChildhoodDev.html">Early Childhood Development</a></li>
+            <li><a href="FosterCare.html">Foster Care and Adoption</a></li>
+            <li><a href="HealthAndWellBeing.html">Health and Well-Being</a></li>
+            <li><a href="HomelessnessAndHousing.html">Homelessness and Housing</a></li>
+            <li><a href="ImmigrationLegalService.html">Immigration Legal Services</a></li>
+            <li><a href="MentalHealth.html">Mental Health</a></li>
+            <li><a href="WorkforceDevelopment.html">Workforce Development</a></li>
+            <li><a href="youth_initiatives.html">Youth Initiatives</a></li>
+          </ul>
+        </li>
+        <li class="menu-has-children"><a href="#"> Donate</a>
+          <ul>
+            <li><a href="Donation.html">Monetary</a></li>
+            <li><a href="DonationI.html">In-Kind</a></li>
+          </ul>
+        </li>
+        <li class="menu-active"><a href="Volunteer.html">Volunteer</a></li>
+        <li class="menu-active"><a href="About.html">About</a></li>
+        <li class="menu-active"><a href="Contact.html">Contact</a></li>
+    </nav><!-- #nav-menu-container -->
+  </div>
+</header><!-- #header -->
   <!--==========================
     Intro Section
   ============================-->
@@ -159,6 +157,8 @@
     <!--==========================
      NVFS Early Head Start Section
     ============================-->
+    <br>
+    <br>
     <section id="services">
       <div class="container">
         <header class="section-header wow fadeInUp">
