--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
               <div class="carousel-content">
                 <h2>Donate</h2>
                 <p>Help Northern Virginia Families Not Just Survive, but Thrive</p>
-                <a href="#featured-services" class="btn-get-started scrollto">Donate</a>
+                <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a>
+                <a href="Donationl.html" class="btn-get-started scrollto">In-Kind Donations</a>
               </div>
             </div>
           </div>
