--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="carousel-content">
                 <h2>Donate</h2>
                 <p>Help Northern Virginia Families Not Just Survive, but Thrive</p>
-                <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a>
+                <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a> <br>
                 <a href="DonationI.html" class="btn-get-started scrollto">In-Kind Donations</a>
               </div>
             </div>
