--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h2>Donate</h2>
                 <p>Help Northern Virginia Families Not Just Survive, but Thrive</p>
                 <a href="Donation.html" class="btn-get-started scrollto">Monetary Donations</a> <br>
-                <a href="DonationI.html" class="btn-get-started scrollto">In-Kind Donations</a>
+                <a href="DonationI.html" class="btn-get-started scrollto">@nbsp In-Kind Donations</a>
               </div>
             </div>
           </div>
